fixed class spacing

--- a/main.less
+++ b/main.less
@@ -19,6 +19,10 @@
 	display: none;
 }
 
+.space{
+	margin: 25%;
+}
+
 .spell-description{
 	@autoscale-width();
 	margin: auto;
